# codex_learningsystem

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.codex-plugin/: plugin.json
cert_study/: __init__.py  cli.py  db.py  engine.py  gold.py  importer.py  mcp_server.py  notion_sync.py  paths.py  quality.py  reporting.py  seed_public.py  seed_sqld.py
cert_study/enrichers/: __init__.py  source_gold.py  sqld_gold.py
cert_study/importers/: adsp_html.py  gcp_gail.py  gcp_html.py  info_processing.py  kdata_text.py
config/: cert_catalog.json  notion_sync.example.json
docs/: architecture.md  exam-expansion-plan.md  notion-cert-gallery.md  notion-schema.md
examples/: private_bank.example.json
scripts/: generate_cert_thumbnails.py  sync_notion.py
skills/cert-study/: SKILL.md
tests/: test_study_system.py
