[project]
name = "codex-learning-system"
version = "0.4.0"
description = "Codex 안에서 CBT 학습을 진행하고 SQLite 기록과 Obsidian-ready 오답노트를 만드는 로컬 학습 견본 플러그인."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sanginn Lee" }]

[project.scripts]
cert-study = "cert_study.cli:main"

[project.optional-dependencies]
pdf = ["pypdf>=5.0.0", "PyMuPDF>=1.24.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
